[workspace]
resolver = "2"
members = ["lib"]

[package]
name = "meepls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
eframe = { version = "0.24.1", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence",
]}
egui = "0.24.1"
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
env_logger = "0.10.1"
hot-lib-reloader = { version = "^0.6", optional = true }
image = { version = "0.24.7", features = ["jpeg", "png"] }
log = "0.4.20"
rfd = { version = "0.12.1", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
lib = { path = "./lib" }

[profile.dev.package."*"]
opt-level = 2

[features]
default = []
reload = ["dep:hot-lib-reloader"]
