[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
csv = "1.3.0"
eframe = { version = "0.24.1", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence",
]}
egui = "0.24.1"
log = "0.4.20"
rfd = { version = "0.12.1", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
