[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
csv = "1.3.0"
eframe = { version = "0.24.1", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence",
]}
egui = "0.24.1"
rfd = { version = "0.12.1", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
ehttp = "^0.3"
serde_json = "1.0.108"
thiserror = "=1.0.52"
egui-notify = "0.11.0"
